mysql database and tables for reservation and menu

--- a/littlelemon/templates/index.html
+++ b/littlelemon/templates/index.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <title>Capstone Project</title>
-        <img src="{% static 'restaurant/logo.png' %}">
+        <img src="{% static 'restaurant/logo.png' %}" alt="little lemon logo">
     </head>
     <body>
         <h1 style="text-align:center;">Welcome To LittleLemon Restaurant</h1>
